--- a/views/admin/cinema.ejs
+++ b/views/admin/cinema.ejs
@@ -13,7 +13,7 @@
                     </tr>
                     <tr>
                         <% for(let i=0 ;i < cinema.length ; i++) { %>
-                            <td><a href="/admin/update/cinemaTimeShow/cinema/<%= cinema[i].cinema_ID %>">
+                            <td><a href="/admin/showtime/cinema/<%= cinema[i].cinema_ID %>">
                                     <%= cinema[i].cinema_Name %>
                                 </a></td>
                             <td>
