update film for admin & show film at homepage

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,8 +21,11 @@
 
 <body>
     <div id="header_admin">
+
         <ul style="display: flex; justify-content: space-between;">
-            <li><a href="/admin" id="logo">Một Chút Film</a></li>
+            <li> <a href="/"> <img src="/public/image/Logo-Dien-03.png" width="100px" alt="Một Chút Phim">
+                </a></li>
+            <li><a href="/admin" id="logo">ADMIN</a></li>
             <li><a href="/admin/showtime">QUẢN LÝ SUẤT CHIẾU</a></li>
             <li><a href="/admin/film">QUẢN LÝ PHIM</a></li>
             <li><a href="/admin/cinema">QUẢN LÝ RẠP</a></li>
