--- a/views/content/intro.ejs
+++ b/views/content/intro.ejs
@@ -2,24 +2,35 @@
     <h3>Giới thiệu</h3>
     <img src="/public/image/bgGioiThieu.jpg" class="imgGioiThieu" width="90%" alt="">
     <div class="contentGioiThieu">
-        <b>Một Chút Phim</b> là một trong top 5 cụm rạp chiếu phim lớn nhất toàn cầu và là nhà phát hành, cụm rạp chiếu phim lớn nhất Việt Nam. Mục tiêu của chúng tôi là trở thành hình mẫu công ty điển hình đóng góp cho sự phát triển không ngừng của ngành
+        <b>Một Chút Phim</b> là một trong top 5 cụm rạp chiếu phim lớn nhất toàn cầu và là nhà phát hành, cụm rạp chiếu
+        phim lớn nhất Việt Nam. Mục tiêu của chúng tôi là trở thành hình mẫu công ty điển hình đóng góp cho sự phát
+        triển không ngừng của ngành
         công nghiệp điện ảnh Việt Nam.
         </br>
         </br>
-        <b>Một Chút Phim</b> đã tạo nên khái niệm độc đáo về việc chuyển đổi rạp chiếu phim truyền thống thành tổ hợp văn hóa “Cultureplex”, nơi khán giả không chỉ đến thưởng thức điện ảnh đa dạng thông qua các công nghệ tiên tiến như SCREENX, IMAX, STARIUM,
-        4DX, Dolby Atmos, cũng như thưởng thức ẩm thực hoàn toàn mới và khác biệt trong khi trải nghiệm dịch vụ chất lượng nhất tại CGV.
+        <b>Một Chút Phim</b> đã tạo nên khái niệm độc đáo về việc chuyển đổi rạp chiếu phim truyền thống thành tổ hợp
+        văn hóa “Cultureplex”, nơi khán giả không chỉ đến thưởng thức điện ảnh đa dạng thông qua các công nghệ tiên tiến
+        như SCREENX, IMAX, STARIUM,
+        4DX, Dolby Atmos, cũng như thưởng thức ẩm thực hoàn toàn mới và khác biệt trong khi trải nghiệm dịch vụ chất
+        lượng nhất tại CGV.
         </br>
         </br>
         Thông qua những nỗ lực trong việc xây dựng chương trình Nhà biên kịch tài năng, Dự án phim ngắn
-        <b>Một Chút Phim</b>, Lớp học làm phim TOTO, <b>Một Chút Phim</b> ArtHouse cùng việc tài trợ cho các hoạt động liên hoan phim lớn trong nước như Liên hoan Phim quốc tế Hà Nội, Liên hoan Phim Việt Nam, <b>Một Chút Phim</b> mong muốn sẽ khám phá
+        <b>Một Chút Phim</b>, Lớp học làm phim TOTO, <b>Một Chút Phim</b> ArtHouse cùng việc tài trợ cho các hoạt động
+        liên hoan phim lớn trong nước như Liên hoan Phim quốc tế Hà Nội, Liên hoan Phim Việt Nam, <b>Một Chút Phim</b>
+        mong muốn sẽ khám phá
         và hỗ trợ phát triển cho các nhà làm phim trẻ tài năng của Việt Nam.
         </br>
         </br>
-        <b>Một Chút Phim</b> Việt Nam cũng tập trung quan tâm đến đối tượng khán giả ở các khu vực không có điều kiện tiếp cận nhiều với điện ảnh, bằng cách tạo cơ hội để họ có thể thưởng thức những bộ phim chất lượng cao thông qua các chương trình vì
+        <b>Một Chút Phim</b> Việt Nam cũng tập trung quan tâm đến đối tượng khán giả ở các khu vực không có điều kiện
+        tiếp cận nhiều với điện ảnh, bằng cách tạo cơ hội để họ có thể thưởng thức những bộ phim chất lượng cao thông
+        qua các chương trình vì
         cộng đồng như Trăng cười và Điện ảnh cho mọi người.
         </br>
         </br>
-        <b>Một Chút Phim</b> sẽ tiếp tục cuộc hành trình bền bỉ trong việc góp phần xây dựng một nền công nghiệp điện ảnh Việt Nam ngày càng vững mạnh hơn cùng các khách hàng tiềm năng, các nhà làm phim, các đối tác kinh doanh uy tín, và cùng toàn thể
+        <b>Một Chút Phim</b> sẽ tiếp tục cuộc hành trình bền bỉ trong việc góp phần xây dựng một nền công nghiệp điện
+        ảnh Việt Nam ngày càng vững mạnh hơn cùng các khách hàng tiềm năng, các nhà làm phim, các đối tác kinh doanh uy
+        tín, và cùng toàn thể
         xã hội.
     </div>
 </div>
