--- a/views/admin/filmAll.ejs
+++ b/views/admin/filmAll.ejs
@@ -7,8 +7,9 @@
                         <th>STT</th>
                         <th>Tên phim </th>
                         <th>Ảnh phim </th>
-                        <th>Thời lượng</th>
+                        <th>Thời lượng (phút)</th>
                         <th>Ngày công chiếu</th>
+                        <th>Trạng thái</th>
                         <th>Lượt ghé thăm</th>
                         <th>Thao tác</th>
                     </tr>
@@ -27,15 +28,30 @@
                                 <img src="<%= filmAll[i].film_Image %>" alt=" Poster film" />
                             </td>
                             <td>
-                                <%= filmAll[i].film_Time + ' (phút)' %>
+                                <%= filmAll[i].film_Time %>
                             </td>
                             <td>
                                 <% var d=new Date(filmAll[i].film_DatePublic); %>
-                                    <%= d.getDate(); %>
-                                        /
-                                        <%= d.getMonth() + 1; %>
-                                            /
-                                            <%= d.getFullYear(); %>
+                                    <% if(d.getDate()<10){ %>
+                                        <%= '0' + String(d.getDate()) %>
+                                            <% }else{ %>
+                                                <%= d.getDate() %>
+                                                    <% }; %>
+                                                        /
+                                                        <% if(d.getMonth()<10){ %>
+                                                            <%= '0' + String(d.getMonth()) %>
+                                                                <% }else{ %>
+                                                                    <%= d.getMonth() %>
+                                                                        <% }; %>
+                                                                            /
+                                                                            <%= d.getFullYear(); %>
+                            </td>
+                            <td>
+                                <% if(filmAll[i].film_Public==true){ %>
+                                    Công chiếu
+                                    <% }else{ %>
+                                        <b> Không công chiếu</b>
+                                        <% }%>
                             </td>
                             <td>
                                 <%= filmAll[i].film_ViewCount %>
@@ -84,7 +100,7 @@
                 <label> Thời lượng phim:</label>
                 <input type="number" value="<%= filmAll[i].film_Time %>" name="filmTime" required>
 
-                <label> Ngày công bố:</label>
+                <label> Ngày công chiếu:</label>
                 <input type="text"
                     value="<% var d=new Date(filmAll[i].film_DatePublic);%><%= d.getDate(); %>/<%= d.getMonth() + 1; %>/<%= d.getFullYear();%>"
                     readonly>
@@ -92,19 +108,38 @@
                 <input type="date" name="filmPublicDate" />
                 <br>
 
+                <label> Trạng thái:</label>
+                <select name="filmPublic">
+                    <% if(filmAll[i].film_Public==true){ %>
+                        <option value="true" selected>
+                            Công chiếu
+                        </option>
+                        <option value="false">
+                            Không công chiếu
+                        </option>
+                        <% }else{%>
+                            <option value="true">
+                                Công chiếu
+                            </option>
+                            <option value="false" selected>
+                                Không công chiếu
+                            </option>
+                            <% }%>
+                </select><br>
+
+
+
                 <img src="<%= filmAll[i].film_Image %>" />
                 <br><br>
                 <label> Chọn ảnh mới:</label>
                 <input type='file' value="<%= filmAll[i].film_Image %>" id="film_Image" name="filmImage">
 
+                <label> Nội dung phim:</label><br>
+                <textarea name="filmContent" rows="5" placeholder="Nội dung phim" style="width:100%;margin-top: 10px; "
+                    required><%= filmAll[i].film_Content %>
+                </textarea><br>
                 <button type="submit" value="Cập nhật phim" class="insertbtn">
-                    Cập nhật
-                </button>
-            </div>
-
-            <div class="container">
-                <button type="button" class="cancelbtn" id="btn_close_film_1_<%= filmAll[i].film_ID %>">
-                    HUỶ
+                    CẬP NHẬT
                 </button>
             </div>
         </form>
@@ -140,6 +175,20 @@
                     <label>Thời lượng: </label>
                     <input placeholder="Số phút" type="number" id="film_Time" name="filmTime" required>
                     <br />
+
+                    <label>Trạng thái: </label>
+                    <select name="filmPublic">
+                        <option value="true" selected>
+                            Công chiếu
+                        </option>
+                        <option value="false">
+                            Không công chiếu
+                        </option>
+                    </select><br>
+
+                    <label> Nội dung phim:</label><br>
+                    <textarea name="filmContent" rows="5" cols="full" placeholder="Nội dung phim"
+                        style="width:100%;margin-top: 10px; " required></textarea><br>
 
                     <button type="submit" value="Thêm vào danh sách phim">
                         THÊM
