Update and add auth middleware for admin and user

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,10 +26,10 @@
     <header>
 
         <!--Header top-->
-        <% if ( typeof user !=='undefined' ) { %>
-            <% include Header/logged.ejs %>
+        <% if (currentUser) { %>
+            <% include header/logged %>
                 <% } else { %>
-                    <% include Header/noLogin.ejs %>
+                    <% include header/noLogin %>
                         <% } %>
                             <!--Menu header-->
                             <nav class="navbar navbar-default ">
