add filter showtimes by Cineplex

--- a/views/admin/filmAll.ejs
+++ b/views/admin/filmAll.ejs
@@ -39,7 +39,7 @@
                                                     <% }; %>
                                                         /
                                                         <% if(d.getMonth()<10){ %>
-                                                            <%= '0' + String(d.getMonth()) %>
+                                                            <%= '0' + String(d.getMonth()+1) %>
                                                                 <% }else{ %>
                                                                     <%= d.getMonth() %>
                                                                         <% }; %>
