--- a/public/css/home.css
+++ b/public/css/home.css
@@ -200,15 +200,15 @@
     }
     
     .content-rap-bg {
-        width: 300px;
+        width: 500px;
         height: 34px;
         line-height: 34px;
         border-left: 5px solid black;
-        background-color: #87b5ff;
+        background-color: #B31B1A;
         padding-top: 7px;
         padding-right: 20px;
         padding-bottom: 7px;
-        padding-left: 20px;
+        padding-left: 10px;
         margin-top: 15px;
     }
     
