--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Admin web đặt vé phim</title>
+    <title>MỘT CHÚT FILM - ADMIN</title>
     <script src="/public/js/yesOrNo_Admin.js"></script>
     <script src="/public/js/jquery/jquery-3.4.1.min.js"></script>
     <script src="/public/js/jquery/adminjq.js"></script>
