--- a/views/admin/showtimesByFilm.ejs
+++ b/views/admin/showtimesByFilm.ejs
@@ -70,10 +70,10 @@
                     <% } %>
 </div>
 
-<a id="btn_create_showtimesByFilm" class="btn_create">Thêm suất chiếu</a>
+<a id="btn_create_showtime" class="btn_create">Thêm suất chiếu</a>
 
 
-<div id="create_showtimesByFilm" class="modal">
+<div id="create_showtime" class="modal">
     <!-- Modal thêm -->
     <span class="close" title="Close Modal" id="btn_close_showtime_create">
         &times;
