--- a/views/admin/cineplex.ejs
+++ b/views/admin/cineplex.ejs
@@ -23,10 +23,8 @@
                             <td>
                                 <b id="btn_update_cineplex_<%= cineplex[i].cineplex_ID %>">
                                     <i class="fas fa-edit"></i>
-                                </b>
-                                &nbsp;&nbsp;
-                                <a href="/admin/cineplex/delete/<%= cineplex[i].cineplex_ID %>"
-                                    onclick="return confirmAction()">
+                                </b> &nbsp;&nbsp;
+                                <a href="/admin/cineplex/delete/<%= cineplex[i].cineplex_ID %>" onclick="return confirmAction()">
                                     <i class="fas fa-trash"></i>
                                 </a>
                             </td>
@@ -43,15 +41,15 @@
 <div>
     <% for(let i=0 ;i < cineplex.length ; i++) { %>
         <script>
-            $(document).ready(function () {
+            $(document).ready(function() {
                 $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
-                $("#btn_update_cineplex_<%= cineplex[i].cineplex_ID %>").click(function () {
+                $("#btn_update_cineplex_<%= cineplex[i].cineplex_ID %>").click(function() {
                     $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").show();
                 });
-                $("#btn_close_cineplex_1_<%= cineplex[i].cineplex_ID %>").click(function () {
+                $("#btn_close_cineplex_1_<%= cineplex[i].cineplex_ID %>").click(function() {
                     $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
                 });
-                $("#btn_close_cineplex_<%= cineplex[i].cineplex_ID %>").click(function () {
+                $("#btn_close_cineplex_<%= cineplex[i].cineplex_ID %>").click(function() {
                     $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
                 });
 
@@ -68,8 +66,7 @@
 
             <!-- FORM CẬP NHẬT -->
 
-            <form class="modal-content animate" action="/admin/cineplex/update/<%=cineplex[i].cineplex_ID %>"
-                method="POST" id="btn_update_cineplex">
+            <form class="modal-content animate" action="/admin/cineplex/update/<%=cineplex[i].cineplex_ID %>" method="POST" id="btn_update_cineplex">
 
                 <div class="container">
                     <label> Tên cụm rạp:</label>
@@ -107,8 +104,7 @@
             <label>Tên cụm rạp:</label>
             <input type="text" placeholder="Tên cụm rạp" id="cineplex_Name" name="cineplexName" required /><br />
             <label> Địa Chỉ :</label>
-            <input type="text" placeholder="Địa chỉ cụm rạp" id="cineplex_Address" name="cineplexAddress"
-                required /><br />
+            <input type="text" placeholder="Địa chỉ cụm rạp" id="cineplex_Address" name="cineplexAddress" required /><br />
             <button type="submit" value="Thêm vào danh sách cụm rạp">
                 THÊM
             </button>
