--- a/views/partials/slide_header.ejs
+++ b/views/partials/slide_header.ejs
@@ -14,38 +14,38 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="../public/image/slide_header/latmat-2.jpg" alt="Không load được ảnh">
+            <img class="img-center" src="../public/image/slide_header/xem_phim_web_980x448.jpg" alt="Không load được ảnh">
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
+        <div class="item ">
+            <img class="img-center" src="../public/image/slide_header/cgv-production-team-midnite-streetfood-980x448_3.jpg" alt="Không load được ảnh">
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="../public/image/slide_header/Tiec-Trang-Mau-5-banner.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/slide-header-godzilla-de-vuong-bat-tu.jpg" alt="Không load được ảnh">
+            <img src="../public/image/slide_header/Rom-2020-Vietnamese-Clipships.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/slide-header-vo-gian-dao.jpg" alt="Không load được ảnh">
+            <img src="../public/image/slide_header/Tiec-Trang-Mau-5-banner1.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/banner-bo-gia-final-2.jpg" alt="Không load được ảnh">
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img src="../public/image/slide_header/slide-header-vo-gian-dao.jpg" alt="Không load được ảnh">
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img src="../public/image/slide_header/slide-header-x-men-phuong-hoang-bong-toi.jpg"
-                alt="Không load được ảnh">
+            <img src="../public/image/slide_header/slide-header-x-men-phuong-hoang-bong-toi.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
